# DDLKiller-Sync-Server

./: .gitignore  CMakeLists.txt  README.md  install_service.sh
json_template/full_update/: force_full_update.json  force_full_update_compact.json  full_update.json  full_update_compact.json
json_template/modifications/: add.json  add_compact.json  complete.json  delete_compact.json  modify_compact.json
json_template/response/: response.json
src/database/: DatabaseManager.cpp  DatabaseManager.h  TestDatabase.cpp
src/json/: JsonParser.cpp  JsonParser.h  JsonSender.cpp  JsonSender.h
src/websocket/: WebSocketServer.cpp  WebSocketServer.h  WebSocketSession.cpp  WebSocketSession.h
